# pandoc-flow-official

./: .gitignore  INDEX.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: INDEX.md  Obsidian导出配置.md  Pandoc命令指南.md  README.md  Typora导出配置.md  Typora手动配置指南.md  Typora详细配置教程.md  公文字体规范.md  更新标题映射.md
examples/: 示例文档.md
fonts/: README.md
output/: 脚本测试1.docx  脚本测试2.docx  脚本测试3.docx  脚本测试4.docx
scripts/: README.md  convert_doc.bat  convert_doc.sh  convert_doc_updated.bat  convert_doc_with_font.bat  convert_doc_with_font.sh  drag_to_convert.bat  install_typora_config.bat  install_typora_simple.bat  setup_typora.bat
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-convert-markdown.json  main.json
src-tauri/src/: conversion.rs  events.rs  main.rs
templates/: README.md  pandoc-defaults.yaml  公文模板.docx
typora-config/: README.md  typora-config.json
typora-config/typora-theme/official-document/: README.md  official.css  theme.css
