[package]
name = "pandoc-flow"
version = "2.3.4"
description = "Markdown to GB/T 9704-2012 Official Word Document"
authors = ["Pandoc Flow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tauri-plugin-dialog = "2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
